correct footer alignment

--- a/src/app/components/FooterComponent/FooterComponent.scss
+++ b/src/app/components/FooterComponent/FooterComponent.scss
@@ -5,7 +5,7 @@
     top: calc(100%-10rem);
     bottom:0;
     right: 0;
-    left: 10rem;
+    left: 13rem;
     background-color: rgb(204, 252, 252);
     border-top: 0.5px solid rgb(140, 255, 255);
 }
